--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.1.2",
+    "@types/jest": "^29.5.2",
     "@types/react": "~18.0.14",
     "jest": "^29.2.1",
     "jest-expo": "^48.0.2",
