--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "expo": "~48.0.18",
+    "expo-localization": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "i18n-js": "^4.2.3",
     "react": "18.2.0",
     "react-native": "0.71.8"
   },
